# flatcontainer

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: bench.yml  codspeed.yml  test.yml
benches/: bench.rs
dev/bench/: data.js
examples/: recursive.rs
src/: codec.rs  flatten.rs  impls.rs  lib.rs
src/impls/: codec.rs  columns.rs  consolidate.rs  deduplicate.rs  fixed_columns.rs  huffman.rs  huffman_container.rs  index.rs  mirror.rs  mod.rs  negate.rs  offsets.rs  option.rs  result.rs  slice.rs  slice_copy.rs  slice_owned.rs  storage.rs  string.rs  tuple.rs  vec.rs
tests/: cow.rs  person.rs  recursive.rs  reserve.rs  useful_types.rs
