[package]
name = "flatcontainer"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
description = "A flat container representation for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antiguru/flatcontainer"
rust-version = "1.70"

[dependencies]
cfg-if = "1.0"
paste = "1.0.14"
serde = { version = "1.0", optional = true, features = ["derive"]}

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["serde"]

[profile.bench]
debug = 2
codegen-units = 1
lto = true

[[bench]]
name = "bench"
harness = false
