[package]
name = "flatcontainer"
version = "0.5.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
description = "A flat container representation for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antiguru/flatcontainer"
rust-version = "1.65"

[dependencies]
cfg-if = "1.0"
paste = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"]}

[features]
default = ["serde"]

[profile.bench]
debug = 2
codegen-units = 1
lto = true

[dev-dependencies]
bencher = "0.1.5"
codspeed-bencher-compat = "2.6.0"

[[bench]]
name = "bench"
harness = false
